# qbit-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ibm_experiments/: GUBIT10_IBM_Quantum_Results.md  GUBIT11_IBM_Quantum_Results.md  GUBIT12_IBM_Quantum_Results.md  GUBIT13_IBM_Quantum_Results.md  gubit13_quantum_suite.py  gubit13_results.json
qbit_simulator/: __init__.py  attention_gated_relay.py  auditory_pathway.py  axonal_delay_line.py  benchmarks.py  binding_bus.py  bloch.py  bosonic.py  cache.py  circuit.py  circuit_render.py  cochlear_frontend.py  compressed_sensing_relay.py  cortical_relay.py  density.py  dmrg.py  entanglement_reservoir.py  explain.py  fermion.py  fno_core.py  fno_relays.py  gates.py  hemispheric_bridge.py  hierarchical_relay.py  interop.py  kak.py  lanczos.py  lindblad.py  magic_state_distillation.py  measure.py  mera.py  mpo.py  mps.py  neuromodulator_broadcast.py  noise.py  optimizers.py  oscillatory_relay.py  pauli.py  pauli_decomposition.py  peps.py  (+21 more)
tests/: test_adapt_vqe.py  test_adiabatic.py  test_algorithms.py  test_algorithms_tier_beta.py  test_amplitude_estimation.py  test_approximate_counting.py  test_auditory.py  test_benchmarks.py  test_bloch.py  test_block_encoding.py  test_boson_sampling.py  test_bosonic.py  test_cache.py  test_chsh.py  test_circuit.py  test_circuit_render.py  test_classical_shadows.py  test_clock.py  test_coin_flipping.py  test_compose.py  test_composition.py  test_cortical_relay.py  test_decoder.py  test_density.py  test_dmrg.py  test_encoding_relays.py  test_entanglement_reservoir.py  (+106 more)
(+184 files in other folders)
